# secure-notes-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.env.example/: .env.example
.github/workflows/: ci.yml
Dockerfile/: Dockerfile
app/: config.py  db.py  main.py  models.py  routes_auth.py  routes_notes.py  schemas.py  security.py
tests/: test_auth_and_notes.py
